<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/background">

    <!-- Layouts: Relative, Linear, Grid, Frame -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ff0000"
        android:textSize="32sp"
        android:text="@string/txt_view_main_headline" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_txt_insertHere"
            android:id="@+id/editMessage"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_one"/>

        <!-- use DP (dpi - dots per inch) for layout/views -->
        <!-- use SP for text size -->
    <Button
        android:id="@+id/btnSec"
        android:layout_width="300dp"
        android:height="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/btn_two"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mr_bean"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image_view_desc" />

</LinearLayout>
